--- a/nodesendCliente/package.json
+++ b/nodesendCliente/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
